bottom spacing bug fixed and safari white box comming bug fixed

--- a/styles/subscription.css
+++ b/styles/subscription.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 0px;
     border-radius: 20px;
-    background: transparent;
+    background: transparent !important;
     outline: none;
     border: 0px !important;
 }
@@ -19,11 +19,13 @@
 .slider::-moz-range-thumb {
     width: 55px;
     height: 110px;
+    border-radius: 50%;
     border: 0;
     background-image: url('../assets/subscriptionNew/Slider\ knob.svg') !important;
     cursor: pointer;
     background-repeat: no-repeat;
     background-size: contain;
+    background-color: transparent !important;
 }
   
 .slider::-webkit-slider-thumb {
@@ -31,12 +33,14 @@
     appearance: none;
     width: 55px;
     height: 110px;
+    border-radius: 50%;
     border: 0;
     background-image: url('../assets/subscriptionNew/Slider\ knob.svg') !important;
     cursor: pointer;
     background-repeat: no-repeat;
     background-size: contain;
     margin-left: -10px;
+    background-color: transparent !important;
 }
 
 .hrDot {
@@ -217,6 +221,11 @@
         font-size: 20px !important;
         line-height: 30px !important;
         font-weight: 500 !important;
+    }
+
+    .font30 {
+        font-size: 24px !important;
+        line-height: 24px !important;
     }
 }
 
